--- a/css/css.css
+++ b/css/css.css
@@ -76,6 +76,21 @@ img {
 	margin-right: auto;
 	width: 80%;
 }
+video {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	min-width: 100%;
+	min-height: 100%;
+}
+#muteBtn {
+	right: 20px;
+	bottom: 0px;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
 .keyboard-instructions {
 	background-color: #2f2f2f;
 	border: 5px #ff1f00 solid;
