--- a/css/css.css
+++ b/css/css.css
@@ -86,7 +86,7 @@ video {
 }
 #muteBtn {
 	right: 20px;
-	bottom: 0px;
+	bottom: 10px;
 	position: absolute;
 	width: 50px;
 	height: 50px;
@@ -142,6 +142,7 @@ video {
 	font-size: 35px;
 }
 #slidecontainer {
+	display: none;
 	position: fixed;
 	bottom: 0;
 	right: 0;
