--- a/css/css.css
+++ b/css/css.css
@@ -147,24 +147,182 @@ video {
 	bottom: 0;
 	right: 0;
 }
-#scoreLogo{
+#finalScore{
 	position:absolute;
-	bottom: 55%;
-	right:40%;
-	padding:80px;
-	padding-right:145px;
+	bottom: 40%;
+	right:37%;
+	padding:210px;
 	background-image:url(../images/score.png);
 	background-repeat:no-repeat;
-	background-size: 200px 150px;
+	background-size: 400px 300px;
 }
-#finalScore{
+#scoreDisplay{
 	position: absolute;
 	bottom:55%;
 	right:52%;
 	left:48%;
 	padding:10px;
 	color:#ffffff;
-	font-size:30px;
+	font-size:40px;
+	font-weight:bold;	
+}
+html,
+body {
+	width: 100%;
+	height: 100%;
+}
+body {
+	background-color: #ffffff;
+	margin: 0;
+	overflow: hidden;
+	font-family: arial;
+}
+#blocker {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	cursor: default;
+}
+#pauseScreen,
+#menuScreen,
+#instructions,
+#selectMenu {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	text-align: center;
+	width: 100%;
+}
+#pauseScreen,
+#instructions,
+#selectMenu {
+	display: none;
+}
+#buttons {
+	bottom: 100px;
+}
+.button {
+	width: 30%;
+	color: #ff1f00;
+	padding: 5px;
+	font-size: 30px;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 10px;
+}
+.button-play {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+.button-leaderboard {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+.button-help {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+.button-continue {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+.button-quit {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+.button-level {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+img {
+	padding: -100px;
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 80%;
+}
+video {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	min-width: 100%;
+	min-height: 100%;
+}
+#muteBtn {
+	right: 20px;
+	bottom: 60px;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
+.keyboard-instructions {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+	width: 30%;
+	color: #ff1f00;
+	padding: 5px;
+	font-size: 30px;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 10px;
+}
+#iceyBtn {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+	width: 30%;
+	color: #ff1f00;
+	padding: 5px;
+	font-size: 30px;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 10px;
+}
+#chemicalBtn {
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+	width: 30%;
+	color: #ff1f00;
+	padding: 5px;
+	font-size: 30px;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 10px;
+}
+#backBtn {
+	width: 30%;
+	color: #ff1f00;
+	padding: 5px;
+	font-size: 30px;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 10px;
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+}
+#score {
+	position: absolute;
+	top: 8px;
+	right: 16px;
+	font-size: 35px;
+}
+#slidecontainer {
+	display: none;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+}
+#finalScore{
+	position:absolute;
+	bottom: 40%;
+	right:37%;
+	padding:210px;
+	background-image:url(../images/score.png);
+	background-repeat:no-repeat;
+	background-size: 400px 300px;
 }
 #scoreDisplay{
 	position: absolute;
