--- a/css/css.css
+++ b/css/css.css
@@ -42,6 +42,7 @@ body {
 	margin: 0 auto;
 	cursor: pointer;
 	margin-top: 10px;
+	border-radius: 30px 0px 30px 0px;
 }
 .button-play {
 	background-color: #2f2f2f;
@@ -85,8 +86,8 @@ video {
 	min-height: 100%;
 }
 #muteBtn {
-	right: 20px;
-	bottom: 60px;
+	right: 2%;
+	bottom: 2%;
 	position: absolute;
 	width: 50px;
 	height: 50px;
@@ -144,9 +145,53 @@ video {
 #slidecontainer {
 	display: none;
 	position: fixed;
-	bottom: 0;
-	right: 0;
+	color: #ff1f00;
+	font-weight: bold;
+	bottom: 2%;
+	left: 2%;
+	background-color: #2f2f2f;
+	border: 5px #ff1f00 solid;
+	padding-bottom: 10px;
+	padding-right: 4px;
+	border-radius: 30px 0px 30px 0px;
 }
+
+.slider {
+	-webkit-appearance: none;
+	width: 100%;
+	height: 5px;
+	border-radius: 5px;
+	background: #ff1f00;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: 0.2s;
+	transition: opacity 0.2s;
+}
+
+.slider:hover {
+	opacity: 0.5;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #ff1f00;
+	cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #ff1f00;
+	cursor: pointer;
+}
+
 #finalScore {
 	position: absolute;
 	bottom: 52%;
